app/assets/stylesheets/_site.scss
/* ... */
.back-button {
	background-color: transparent;
	background-size: 11px 18px;
	background-repeat: no-repeat;
	background-image: image-url("icon-left-arrow.svg");
	background-position: center center;
	display: block;
	-webkit-appearance: none;
	border: none;
	height: 16px;
	width: 11px;
	padding: 0;
}

.entries-wrap {
	position: relative;
	border-right: 1px solid $list-border;
	@media (max-width: 768px) {
		.feed-selected &, .nothing-selected & {
			border-right-style: none;
		}
	}
}

.entries-header {
	color: #999;
	display: none;
	border-bottom: 1px solid #CCC;
	line-height: 37px;
	height: 37px;
	text-align: center;
	overflow: auto;
	padding-right: 45px;
	> * {
		display: inline-block;
	}
	.back-button {
		float: left;
		height: 36px;
		width: 36px;
	}
	.favicon-wrap {
		position: static;
	}
	.favicon {
		margin-top: 4px;
	}
	@media (max-width: 420px) {
		.feed-selected & {
			display: block;
		}
	}
	@media (max-width: 768px) and (min-width: 621px) {
		.entry-selected & {
			display: block;
		}
	}
}

.entries {
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	overflow-y: auto;
	overflow-x: hidden;
	-webkit-overflow-scrolling: touch;
	ul {
		margin: 0 0 0 0;
		padding: 0 0 17px 0;
		list-style: none;
		li {
			position: relative;
			word-wrap: break-word;
			background-color: #e6e7e8;
			.favicon-wrap {
				top: 23px;
				left: 6px;
			}
			a {
				text-decoration: none;
			}
			.wrap {
				border-bottom: 1px solid $list-background;
				position: relative;
				background-color: #FFF;
				display: block;
				padding: 10px 10px 8px 31px;
				color: #000;
				left: 0;
				transition:left .2s ease;
				&:hover {
					text-decoration: none;
				}
			}
			.icon-gear {
				cursor: pointer;
				position: absolute;
				top: 11px;
				right: 9px;
				height: 12px;
				width: 10px;
				display: none;
				border-top: 2px solid rgba(0,0,0,.3);
				&:after {
					height: 2px;
					background-color: rgba(0,0,0,.3);
					content: "";
					position: absolute;
					left: 0;
					top: 1px;
					display: block;
					width: 10px;
				}
				&:before {
					height: 2px;
					background-color: rgba(0,0,0,.3);
					content: "";
					position: absolute;
					left: 0;
					top: 4px;
					display: block;
					width: 10px;
				}
			}
			.time {
				font-size: 12px;
				color: #999;
				margin-bottom: 1px;
				display: block;
				position: absolute;
				right: 11px;
				top: 10px;
			}
			.title {
				font-weight: bold;
				margin: 0;
				font-size: 14px;
				line-height: 1.1;
				display: block;
				margin-bottom: 4px;
			}
			.feed-title {
				font-size: 12px;
				line-height: 1.3;
				margin: 0 0 1px 0;
				color: #999;
				padding-right: 75px;
				white-space: nowrap;
				overflow: hidden;
				text-overflow: ellipsis;
			}
			.body {
				line-height: 1.3;
				font-size: 12px;
				margin: 0;
				color: #999;
				display: block;
			}
			.icon-star {
				width: 30px;
				height: 21px;
				position: absolute;
				left: 0;
				top: -1px;
				overflow: hidden;
				display: none;
				&:before {
				    position: absolute;
				    top: 0;
				    left: 0;
				    background-color: $selected;
					background-image: image-url("icon-star.svg"), linear-gradient(to bottom, #3399ff 0%, #2c85dd 100%);
					background-position: 2px 2px, 0 0;
					background-repeat: no-repeat, no-repeat;
					width: 30px;
					height: 21px;
				    content: '';
					z-index: 1;
				}
				&:after {
					position: absolute;
					top: 0px;
					left: 9px;
					background-color: #FFF;
					height: 44px;
					width: 27px;
					content: '';
					transform: rotate(56deg);
					z-index: 2;
				}
			}
			&.starred {
				.icon-star {
					display: block;
				}
			}
			&.read {
				.title {
					color: #999;
				}
				.body {
					color: #CCC;
				}
			}
			&.selected {
				.wrap {
					border-color: #666;
					border-top: 1px solid #666;
					margin-top: -1px;
					background: #666666;
				}
				.icon-star {
					&:before {
						background-color: rgba(255,255,255,.4);
						background-image: image-url("icon-star.svg"), none;
					}
					&:after {
						background: #666;
					}
				}
				.feed-title {
					color: rgba(255,255,255, .8) !important;
				}
				.time {
					color: rgba(255,255,255, .8) !important;
				}
				.title {
					color: rgba(255,255,255, 1) !important;
				}
				.body {
					color: rgba(255,255,255, .5) !important;
				}
			}
			.selected &.selected {
				.icon-star {
					&:after {
						background: $selected;
					}
				}
				.icon-gear {
					display: block;
				}
				.time {
					display: none;
				}
				.wrap {
					border-color: $selected;
					border-top: 1px solid $selected;
					background: $selected;
				}
			}
			&:hover {
				.touch & .icon-gear {
					display: none;
				}
			}
			&.show-actions {
				a {
					left: -70%;
				}
			}
			.mark-above-read,
			.mark-below-read {
				position: absolute;
				height: 50%;
				color: #333;
				width: 100%;
				text-align: right;
				cursor: pointer;
				&:hover {
					background-color: #999;
				}
				span {
					font-size: 12px;
					display: block;
					height: 12px;
					overflow: auto;
					margin: auto;
					position: absolute;
					overflow: hidden;
					top: 0;
					left: 0;
					bottom: 0;
					right: 8px;
					line-height: 1;
				}
				i {
					font-style: normal;
				}
				i:before {
					font-style: normal;
					content: "↑";
					padding-right: 4px;
				}
			}
			.mark-below-read {
				bottom: 0;
				border-top: 1px solid #FFF;
				i:before {
					content: "↓";
					top: -2px;
				}
			}
		}
	}
	@media (max-width: 420px) {
		top: 37px; /* entries header */
		bottom: 51px; /* feeds-toolbar */
	}
	@media (max-width: 768px) {
		.entry-selected & {
			top: 37px;
		}
	}
}
/* ... */

